# REALMIP_ValidModel_ML

./: README.md  pyproject.toml
src/: RNN_model.ipynb  age_filter.ipynb  data_check.ipynb  final_valid_model.ipynb  real_final_valid_model.ipynb  valid_model.ipynb  valid_model_smote.ipynb
