[project]
name = "mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.2",
    "numba>=0.57,<0.61",
    "shap>=0.44.1",
    "smote>=0.1",
    "imblearn>=0.0",
    "seaborn>=0.13.2",
    "keras>=3.13.0",
    "torch>=2.9.1",
]


